<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview_uploaded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_image" />

            <TextView
                android:id="@+id/textview_filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageview_uploaded"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/field_filename" />

            <TextView
                android:id="@+id/textview_link_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textview_filename"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/label_link_viewer"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edittext_link_viewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textview_link_view"
                android:layout_alignStart="@+id/textview_link_view"
                android:layout_below="@+id/textview_link_view"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:editable="true"
                android:enabled="true"
                android:inputType="textUri"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edittext_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textview_link_lable"
                android:layout_alignStart="@+id/textview_link_lable"
                android:layout_below="@+id/textview_link_lable"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="10dp"
                android:inputType="textUri"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textview_link_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edittext_link_viewer"
                android:layout_marginLeft="10dp"
                android:text="@string/lable_link_full"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout
            android:id="@+id/fabtoolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            app:containerId="@+id/fabtoolbar_container"
            app:fabId="@+id/fabtoolbar_fab"
            app:fabToolbarId="@+id/fabtoolbar_toolbar"
            app:fadeInFraction="0.2"
            app:hideDuration="200"
            app:horizontalMargin="16dp"
            app:layout_behavior="com.developer.stoyanov.imageuploader.FloatingActionButtonBehavior"
            app:showDuration="600"
            app:verticalMargin="16dp">

            <RelativeLayout
                android:id="@+id/fabtoolbar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabtoolbar_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
                    app:fabSize="normal" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/fabtoolbar_toolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/share_open_in_browser"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/vector_open_in_browser" />

                <ImageView
                    android:id="@+id/share_send_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/vector_email" />

                <ImageView
                    android:id="@+id/share_social"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/vector_people" />

                <ImageView
                    android:id="@+id/share_copy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/vector_copy" />

            </LinearLayout>

        </com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout>

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>